--- a/style.css
+++ b/style.css
@@ -1,5 +1,51 @@
-html {
+* {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #111D13;
+}
+
+header {
+    border: 2px solid white;
+    display: block;
+    text-align: left;
+}
+
+.tabelaPeriodica {
+    border: 2px solid white;
+    display: block;
+    justify-content: center;
+    text-align: center;
+}
+body {
+    margin: auto;
+}
+
+h1, h2 {
+    color: #15B561
+}
+
+h3 {
+    color: #FFFD86;
+}
+
+.pPeriodica {
+    color: #FFFD86;
+}
+
+li {
+    text-decoration: none;
+    list-style: none;
+}
+
+figcaption {
+    font-size: 10px;
+}
+p, li, figcaption {
+    color: #A1CCA5
+}
+
+a {
+    color: #15B561;
+}
+a:hover {
     color: #A1CCA5;
 }
